objects/ASI_eForm_HR_MDM__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_EmployeeKorean_Address__c</fullName>
        <label>Korean Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_AP_Netting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR/AP Netting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Additional_Email__c</fullName>
        <label>Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Additional_Phone__c</fullName>
        <label>Additional Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Band__c</fullName>
        <label>Group Job Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comex</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F (or Local classification)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Branch_Code__c</fullName>
        <label>Branch Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>300-Executive Management</fullName>
                </value>
                <value>
                    <fullName>301-Chief Operating Officer</fullName>
                </value>
                <value>
                    <fullName>302-Management</fullName>
                </value>
                <value>
                    <fullName>310-Finance Director</fullName>
                </value>
                <value>
                    <fullName>311-Finance</fullName>
                </value>
                <value>
                    <fullName>312-Credit</fullName>
                </value>
                <value>
                    <fullName>313-Purchasing</fullName>
                </value>
                <value>
                    <fullName>314-Information Technology</fullName>
                </value>
                <value>
                    <fullName>315-Logistics</fullName>
                </value>
                <value>
                    <fullName>320-HR Director</fullName>
                </value>
                <value>
                    <fullName>321-Human Resources - Compensation &amp; recruiting</fullName>
                </value>
                <value>
                    <fullName>322-Adm. General Services</fullName>
                </value>
                <value>
                    <fullName>323-Human Resources - ER&amp;Training</fullName>
                </value>
                <value>
                    <fullName>324-Organizational Development</fullName>
                </value>
                <value>
                    <fullName>340-External Affairs</fullName>
                </value>
                <value>
                    <fullName>341-Legal</fullName>
                </value>
                <value>
                    <fullName>360-Marketing</fullName>
                </value>
                <value>
                    <fullName>361-Public Relations</fullName>
                </value>
                <value>
                    <fullName>410-Plant-Overhead</fullName>
                </value>
                <value>
                    <fullName>411-Bottling &amp; Packaging</fullName>
                </value>
                <value>
                    <fullName>412-Blending</fullName>
                </value>
                <value>
                    <fullName>413-Plant Administration</fullName>
                </value>
                <value>
                    <fullName>414-Production</fullName>
                </value>
                <value>
                    <fullName>500-National Sales Director</fullName>
                </value>
                <value>
                    <fullName>502-Trade MKT Dir.</fullName>
                </value>
                <value>
                    <fullName>503-Core Metro Pull RSD</fullName>
                </value>
                <value>
                    <fullName>504-Off Trade CSD</fullName>
                </value>
                <value>
                    <fullName>505-Metro WS RSD</fullName>
                </value>
                <value>
                    <fullName>506-Youngnam RSD</fullName>
                </value>
                <value>
                    <fullName>507-Central RSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Business_Unit__c</fullName>
        <defaultValue>&apos;J520&apos;</defaultValue>
        <label>Business Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_C_Effective_Date__c</fullName>
        <label>Job Effective Date / Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Company_Code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>222</fullName>
                </value>
                <value>
                    <fullName>286</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Company_Name_MDM__c</fullName>
        <formula>if( ISPICKVAL (ASI_eForm_Employee_Company_Code__c,&apos;222&apos; ),&apos;PRK&apos; ,&apos;PRKI&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Company_Name__c</fullName>
        <label>External Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Detached</fullName>
                </value>
                <value>
                    <fullName>Apprenticeship</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
                <value>
                    <fullName>Intern</fullName>
                </value>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Effective_Date__c</fullName>
        <label>Effective Date / Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Eligible_PD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Proxy Driving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Employment_Type__c</fullName>
        <label>Full Time / Part Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Expatriation_Status__c</fullName>
        <label>Expatriation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expatriate International Director</fullName>
                </value>
                <value>
                    <fullName>Expatriate International Manager</fullName>
                </value>
                <value>
                    <fullName>Expatriate Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Non Expatriate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_FTE_Percentage__c</fullName>
        <label>FTE Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_GGID__c</fullName>
        <label>Employee GGID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_GL_Offset__c</fullName>
        <label>G/L Offset</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_GSR_Classification__c</fullName>
        <label>GSR Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor (if available) or Non manager</fullName>
                </value>
                <value>
                    <fullName>Executive or Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Home_Country__c</fullName>
        <label>Home Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Host_Country__c</fullName>
        <label>Work Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Is_Salesman__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Salesman</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Job_Family__c</fullName>
        <label>Job Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Public Affairs and S&amp;R</fullName>
                </value>
                <value>
                    <fullName>Facilities Management and General Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_eForm_Employee_Job_Family__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Trade Marketing</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>General Management</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Purchasing</fullName>
                </value>
                <value>
                    <fullName>Quality / Safety / Environment</fullName>
                </value>
                <value>
                    <fullName>Research and Development</fullName>
                </value>
                <value>
                    <fullName>Operations management</fullName>
                </value>
                <value>
                    <fullName>Supply chain</fullName>
                </value>
                <value>
                    <fullName>Logistics (Warehousing / Transport)</fullName>
                </value>
                <value>
                    <fullName>Distillation / ageing / blending / winemaking</fullName>
                </value>
                <value>
                    <fullName>Bottling (spirits &amp; wines)</fullName>
                </value>
                <value>
                    <fullName>Viticulture</fullName>
                </value>
                <value>
                    <fullName>Sales management</fullName>
                </value>
                <value>
                    <fullName>Sales On trade</fullName>
                </value>
                <value>
                    <fullName>Sales Luxury (On trade)</fullName>
                </value>
                <value>
                    <fullName>Sales Export</fullName>
                </value>
                <value>
                    <fullName>Sales Off trade</fullName>
                </value>
                <value>
                    <fullName>Sales Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Sales Administration &amp; Customer Service</fullName>
                </value>
                <value>
                    <fullName>Sales Visitor centers</fullName>
                </value>
                <value>
                    <fullName>Brand Promotors &amp; Merchandisers</fullName>
                </value>
                <value>
                    <fullName>Sales Expert Matters</fullName>
                </value>
                <value>
                    <fullName>Finance Controlling</fullName>
                </value>
                <value>
                    <fullName>Finance Accounting</fullName>
                </value>
                <value>
                    <fullName>Finance Tax</fullName>
                </value>
                <value>
                    <fullName>Finance M&amp;A</fullName>
                </value>
                <value>
                    <fullName>Finance Treasury</fullName>
                </value>
                <value>
                    <fullName>Finance Audit &amp; Internal Control</fullName>
                </value>
                <value>
                    <fullName>Finance Management &amp; Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comex</fullName>
                </value>
                <value>
                    <fullName>CODI</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>CEO / MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Job_Title__c</fullName>
        <label>Job Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Korean_Name__c</fullName>
        <label>Korean Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Last_Action__c</fullName>
        <label>Last Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hire</fullName>
                </value>
                <value>
                    <fullName>Internal Move</fullName>
                </value>
                <value>
                    <fullName>Mobility Out</fullName>
                </value>
                <value>
                    <fullName>Mobility In</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Legal_Entity__c</fullName>
        <label>Home Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alld Dom Spirits&amp;Wine Hld Ltd</fullName>
                </value>
                <value>
                    <fullName>Centre de Recherche Pernod Ricard (CRPR)</fullName>
                </value>
                <value>
                    <fullName>Chivas Brothers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Corby Distilleries</fullName>
                </value>
                <value>
                    <fullName>Cusenier</fullName>
                </value>
                <value>
                    <fullName>Dillon Bass</fullName>
                </value>
                <value>
                    <fullName>Domecq Bodegas</fullName>
                </value>
                <value>
                    <fullName>GH Mumm &amp; Cie / Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Havana Club International</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers Group</fullName>
                </value>
                <value>
                    <fullName>Irish Distillers Ltd.</fullName>
                </value>
                <value>
                    <fullName>Jan Becher</fullName>
                </value>
                <value>
                    <fullName>Martell &amp; Co</fullName>
                </value>
                <value>
                    <fullName>Martell Mumm Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Orlando Wines</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Headquarter</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Americas Travel Retail</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Andes</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Angola</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Argentina</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Argentina Cluster</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Armenia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Duty Free</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Asia Headquarter</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Australia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Austria</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Baltics</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Belgium</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Bosnia</fullName>
                </value>
                <value>
                    <fullName>Pernod Ricard Brasil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Location__c</fullName>
        <label>Location? Building / Room / Floor?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Manager_Full_Name__c</fullName>
        <formula>IF(ASI_eForm_Employee_Manager_Local_EEID__c&lt;&gt;&quot;&quot;,
ASI_eForm_Employee_Manager_Local_EEID__r.ASI_eForm_Employee_Last_Name__c +&apos;, &apos;+ 
ASI_eForm_Employee_Manager_Local_EEID__r.ASI_eForm_Employee_First_Name__c
, &quot;&quot;)</formula>
        <label>Manager Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Manager_Local_EEID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager Local Employee ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>HR MDMs (Manager EE ID)</relationshipLabel>
        <relationshipName>HR_MDMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>De Facto</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Nationality_Country_1__c</fullName>
        <label>Nationality Country 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ÅLAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA, PLURINATIONAL STATE OF</fullName>
                </value>
                <value>
                    <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>